# radio-reference-au

./: .gitignore  README.md  main.py  pyproject.toml  settings.py
csv/australian_capital_territory/: australian_capital_territory_statewide.csv
csv/australian_islands/: norfolk_island.csv
csv/new_south_wales/: central_west_cw.csv  hunter_ht.csv  illawarra_il.csv  mid_north_coast_nc.csv  murray_mr.csv  murrumbidgee_mg.csv  new_south_wales_statewide.csv  sydney_inner_si.csv  sydney_outer_so.csv  sydney_surrounds_ss.csv
csv/northern_territory/: darwindaly.csv
csv/queensland/: northern_north_tropical_coast_tablelands.csv  northern_northern_goldfields_upper_flinders.csv  queensland_statewide.csv  southeast_southeast_coast.csv  southeast_wide_bay_burnett.csv
csv/south_australia/: central_greater_adelaide_mt_lofty_ranges.csv  northern_agricultural_flinders.csv  south_australia_statewide.csv  southeast_lower_south_east.csv
csv/tasmania/: north_east_flinders_island.csv  northwest_coast_king_island.csv  south_east_huon_channel_lower_derwent_valley.csv  tasmania_statewide.csv
csv/victoria/: eastern_metro.csv  gippsland.csv  grampians.csv  loddon_mallee.csv  north_west_metro.csv  south_western.csv  southern_metro.csv  victoria_statewide.csv
csv/western_australia/: kimberley.csv  lower_west.csv  perth.csv  pilbara.csv  southwest.csv  western_australia_statewide.csv
radio_reference_scrape/: rrdb.py  scrape.py
util/: files.py
