[tool.poetry]
name = "radio-reference-au"
version = "0.1.0"
description = ""
authors = ["Sir Brandon <bwhite@infoxchange.org>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

